# rust-bytecode

./: Cargo.toml  README.md  package.json
src/: class.rs  class_version.rs  const_pool.rs  const_type.rs  error.rs  lib.rs  pretty_print.rs  reader.rs  structs.rs
src/reader/: access_flags.rs  attributes.rs  class.rs  class_version.rs  const_pool.rs  const_types.rs  fields.rs  interfaces.rs  methods.rs
src/structs/: access_flags.rs  attributes.rs  class.rs  class_version.rs  const_pool.rs  const_types.rs  fields.rs  interfaces.rs  methods.rs  opcodes.rs
testdata/: HelloWorld.java
